mlops/k8s/platform/templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: immich-route
  namespace: immich-platform
spec:
  parentRefs:
  - name: immich-gateway
  rules:
  - backendRefs:
    - name: immich-tagger
      namespace: immich-production
      port: 8080
      weight: 90
    - name: immich-tagger
      namespace: immich-canary
      port: 8081
      weight: 10
